<resources>
    <string name="app_name">MDR Service</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">"Profile"</string>
    <string name="contactus">"Contract Us"</string>
    <string name="logout">"Logout"</string>
    <string name="twitterUsername">\anujvicky801@gmail.com</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="mahuadanr">MAHUADANR</string>
    <string name="_9939009920">9939009920</string>
    <string name="phone">Phone</string>
    <string name="google_maps_key" translatable="false">AIzaSyAIyTC8IYMhmFNJ68qfnkbVw0K_vsi4qLA</string>
    <string name="alternate_phone">Alternate phone</string>
    <string name="atta_and_flour">Atta &amp; Flour</string>
    <string name="dals">Dals &amp; pulses</string>
    <string name="oils">Cooking Oils</string>
    <string name="biscuit">Biscuits</string>
    <string name="noodles">Noodles and Pasta</string>
    <string name="healthDrink">Health Drinks</string>
    <string name="teaCoffee">Tea &amp; Coffee</string>
    <string name="lundary">Laundary Detergent</string>



</resources>