<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:src="@drawable/userimg" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_below="@+id/profile_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:ellipsize="marquee"
            android:fontFamily="sans-serif-light"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/mahuadanr"
            android:textAllCaps="true"
            android:textColor="@color/address"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followersBg"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"

                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"

                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/followingBg"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"

                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"

                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linlay1"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/dataedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />


                <EditText
                    android:id="@+id/editname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alternate_phone"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editalternatenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="349dp"
            android:layout_height="110dp"
            android:layout_below="@+id/dataedit"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/updatebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/gradStart"
                android:text="Update" />


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>